# DMD

./: README.md  pyproject.toml  pytest.ini
src/: __init__.py  dmd_processor.py
tests/: check_edf.py  generate_test_edf.py  test_dmd_processor.py
tests/data/: test_generator.edf
