[tool.poetry]
name = "dmd-edf-processor"
version = "0.1.0"
description = "EDFファイルのDMD処理ツール"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.24.3"
scipy = "1.10.1"
mne = "1.4.0"
pyedflib = "0.1.40"
matplotlib = "3.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
